# substrate_handshake

./: CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: automerge-deps.yml  keep-green.yml
src/: main.rs
