[package]
name = "substrate_handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio-tungstenite = "0.16"
parity-scale-codec = { version = "3.1.0", features = ["derive"] }
tokio-stream = "0.1"
futures-util = "0.3"
